# google-analytics-mcp

./: Dockerfile  pyproject.toml
analytics_mcp/: server.py
